# interview_code

./: README.md
Find the 10 most frequent words from a file/: CMakeLists.txt  data.txt  readme.md
Find the 10 most frequent words from a file/include/: TrieNode.h
Find the 10 most frequent words from a file/src/: TrieNode.cpp  main.cpp
